What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

September 19, 2007
* [Parvatha] Fixed issues with generation of SOP marker. 

September 18, 2007
* [Parvatha] Fixed issues with Reading and Writing TIF images in convert.c to avoid segmentation fault. 
* [Parvatha] Fixed issues relating to using user specified rates for CINEMA option for multiple images.

September 17, 2007
* [FOD] Fixed issues with cstr_info when codestream has components with different number of resolutions. 
! [FOD] OpenJPEG library interface modified to retain compatibility with version 1.2 

September 12, 2007
* [FOD] Patch from Callum Lerwick.
		Fixed the library linking so it links with the soversion properly set. 
		Fixes up the install targets so that it interacts properly with RPM. 
		Install target for MJ2. Sets some necessary and useful CFLAGS if gcc is in use.		
* [FOD] Updated the MJ2 codec to be compatible with the recent changes in the OpenJPEG library

September 11, 2007
* [GB] JPWL encoding is finalized correctly into the JP2 file format; added an additional structure in opj_codestream_info, to keep a record of the written markers

September 8, 2007
* [GB] Adapted the JPWL and OPJViewer code to new interface; fixed a samll bug in JPWL which created large EPBs even when null protection was specified

September 7, 2007
+ [FOD] Indexes can now be generated when decoding J2K codestreams.
* [Mathieu Malaterre] Upon failure, properly return error code (!=0).
* [Mathieu Malaterre] CMake: Add cmake code to do testing if user has properly setup a testimages directory

September 6, 2007
+ [Mathieu Malaterre] CMake: start compiling mj2, jpwl and jp3d
+ [Mathieu Malaterre] CMake: output all executable/libs into one single directory
+ [Mathieu Malaterre] CMake: start compiling index_create
+ [Mathieu Malaterre] OpenJPEG.rc update copyright year