@@ -33,12 +33,11 @@ ENDIF(WIN32)
 # Create the library
 ADD_LIBRARY(${OPENJPEG_LIBRARY_NAME} ${OPENJPEG_SRCS})
 SET_TARGET_PROPERTIES(${OPENJPEG_LIBRARY_NAME} PROPERTIES
-	SOVERSION ${OPENJPEG_SOVERSION}
-	VERSION ${OPENJPEG_SOVERSION}.${OPENJPEG_VERSION})
+	${OPENJPEG_LIBRARY_PROPERTIES})
 
 # Install library
 INSTALL(TARGETS ${OPENJPEG_LIBRARY_NAME}
-	DESTINATION ${CMAKE_INSTALL_LIBDIR})
+	DESTINATION lib)
 
 # Install includes files
 INSTALL(FILES openjpeg.h
